@@ -1,1 +1,0 @@
-.First.lib <- function(lib, pkg) library.dynam("princurve", pkg, lib)
